# frwk-python

./: .gitignore  LICENSE  README.md  frwk-python.code-workspace
app/: pyproject.toml
app/src/: lambda_function.py
app/src/conf/: config.py
app/src/observability/: logger.py
app/src/rest/: login.py
