[tool.poetry]
name = "frwk-python"
version = "0.1.0"
description = "projeto para estudo de python"
authors = ["andersonbalves <baratella.anderson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = "^3.7.0"
dynaconf = "^3.2.10"
boto3 = "^1.37.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
